# compiler-project

./: .gitignore  .gitlab-ci.yml  ManuelCourtUtilisation.md  README.MD  fix_git.sh  h4222.7z
SqueletteProjet/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  init_makefile.sh
SqueletteProjet/AST/: AST.cpp  AST.h  SymbolTable.cpp  SymbolTable.h
SqueletteProjet/compiler/: .s  2_affectation.c  6_mix_of_all_addIntToIf_0.c  6_mix_of_all_addIntToIf_0.s  Makefile  ManuelCourtUtilisation.md  README.md  a.out  compile_docker.sh  demo1.c  demo10.c  demo10_4.c  demo1_0.c  demo3.c  demo3_2.c  demo8.c  demo9.c  execute.sh  fct.s  ifcc  ifcc.g4  main.cpp  main.s  putGetChar.c  putGetChar.s  ret42.c  ret42.cpp  ret42.s  ret43.s  run_gcc.sh  simpleGrammar.g4  test.c  test.s  test.sh  test1.s  tst.s  visitor.cpp  visitor.h
SqueletteProjet/compiler/AST/: AST.cpp  AST.h  SymbolTable.cpp  SymbolTable.h
SqueletteProjet/compiler/Erreur/: Erreur.cpp  Erreur.h
SqueletteProjet/compiler/IR/: IR.cpp  IR.h
SqueletteProjet/compiler/demo/: demo1.c  demo10_1.c  demo10_2.c  demo10_3.c  demo10_5.c  demo11.c  demo11_1.c  demo1_1.c  demo1_2.c  demo4.c  demo4_1.c  demo6.c  demo9.c
SqueletteProjet/compiler/pld-test-output/ret42/: asm-gcc.s  exe-gcc  pld-compile.txt
SqueletteProjet/grammaire/: grAvancement.g4  grAvancement2.g4  grAvancement3.g4  grAvancement4.g4  grammaire.g4
SqueletteProjet/rendu-mis-parcours/: h4222-rendu-mis-parcours.7z
SqueletteProjet/tests/: pld-test.py  pld-wrapper.sh  result.txt  ret42.c  ret42.s  test-result.txt  test_if.sh
SqueletteProjet/tests/pld-test-output/tests-Init-0_Main/: asm-gcc.s  exe-gcc  exe-pld
SqueletteProjet/tests/pld-test-output/tests-Init-1_fail/: gcc-compile.txt  (+1 more)
(+254 files in other folders)
